Replace use of List.of() with Collections.singletonList().